--- a/src/main/resources/templates/acronyms.html
+++ b/src/main/resources/templates/acronyms.html
@@ -1,30 +1,34 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Glossaire PE</title>
-    <!-- Bootstrap core CSS -->
+    <title>Liste acronymes</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-       <!-- Bootstrap4 core CSS -->
+    <!-- Bootstrap4 core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="/bootstrap.min.css" media="screen"/>
+    <style>
+        .navigation-order{
+            margin-bottom: 30px;
+        }
+    </style>
+</head>
+<!--suppress Annotator -->
 <body>
 
-<!-- Navigation -->
+
 <div class="row" style="height: 120px;background-color:#EBEBDC;">
     <img src="img/dico.png" alt="Dico photo" style="height: 80px; left: 20px; position: absolute; top: 15px; width: 80px;"/>
     <div style="position:absolute; left:100px; top:45px; height:45px; background-color:#EBEBDC; font-family:'Arial Gras Italique', 'Arial';
                 font-weight:700; font-style:italic; font-size:22px; text-decoration:none; color:#FF6633; text-align:left;
                 border-color:transparent; outline-style:none;">DicoDsi
     </div>
-    <span class="spanmenu">Recherche alphabétique  &nbsp;&nbsp;&nbsp;</span>
+    <span class="spanmenu">&nbsp;&nbsp;</span>
     <div  class="divmenu">
-        <input type="text" style="width:380px; margin-left:16px;font-size:16px;" placeholder="Entrez l'acronyme ou les 1ères lettres (3 au max.)" />
+        <input type="text" style="width:380px; margin-left:16px;font-size:16px;" placeholder="ARE" />
         <button type="submit" id="btn_search">
             <img src="img/search.png" alt="Search Logo"></button>
 
@@ -38,50 +42,49 @@
         <input type="text" id="motcle3" />
     </div>
 </div>
+<div class="container">
 
+    <!--h2 th : txt="${name}"></h1>
+    <h2  th : txt="${author}></h2-->
 
-
-
-<!-- Masthead -->
-<header class="masthead text-center" align="center" >
-    <div class="container">
+    <!--div th:if="$ not #lists.isEmpty(acronyms)}"-->
         <div class="row">
-            <div class="col-xl-9 mx-auto">
-                <h6> Bienvenue sur le dictionnaire partagé de la DSI</h6>
-                <h6 style="margin-bottom: 0px;">Saisissez un terme, un acronyme ou des mots clé et cliquez sur la loupe</h6>
-                <h6> pour obtenir sa définition.</h6>
-                <h6 style="margin-bottom: 0px;"> Si le terme recherché n'éxiste pas dans le Dico,</h6>
-                <h6 style="margin-bottom: 0px;">n'hésitez pas à créer lorsque vous aurez les différents éléments</h6>
-                <h6>nécessaires à sa création (libellé en clair et sa définition)</h6>
-                <h6 style="margin-bottom: 0px;"> Si la définition proposée vous semble erronée,</h6>
-                <h6> vous avez la possibilité de la corriger.</h6>
-                <h6> Si le terme ou acronyme n'est plus usité, déclarez le comme obsolète.</h6>
-                <h6> Bonne navigation. </h6>
+            <div class="col-lg-8 col-md-7 col-sm-6">
+                <h6>12 terme peuvent correspondre à votre recherche</h6>
+
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Résumé</th>
+                        <th>Définition</th>
+                        <th>creation</th>
+                        <th>author</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    <tr th:each="acronym : ${acronyms}">
+                        <td th:text="${acronym.name}"></td>
+                        <td th:text="${acronym.description.shortD}"></td>
+                        <td th:text="${acronym.description.longD}"></td>
+                        <td th:text="${acronym.creation}"></td>
+                        <td th:text="${acronym.author}"></td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
-    </div>
+    <!--/div-->
+</div>
 
-    <br>
-    <br>
-    <div class="row navigation-order">
-        <div class="col-lg-8 col-md-7 col-sm-6">
-            <a href="/acronyms">Test affichage liste acronymes</a>
-        </div>
-    </div>
-
-</header>
-
-
-<style>
-    a.ex2:hover, a.ex2:active {font-size: 110%;}
-</style>
-
-
-<footer  style="height:80px;background-color:#EBEBDC;" >
-    <div class="float-lg-left" th:text="${nombre} + ' termes à la  date du 12/06/2018'">
+<footer  style="height:80px;background-color:#EBEBDC;  position: absolute;
+  bottom: 0;
+  width: 100%;" >
+    <div class="float-lg-left" th:text="${nombre} + ' termes à la  date du 16/06/2018'">
     </div>
     <div class="container">
-        <div class="row" >
+        <div class="row">
 
             <div class="col-lg-12 h-40 text-lg-right">
                 <ul class="list-inline mb-2">
@@ -97,7 +100,5 @@
         </div>
     </div>
 </footer>
-
 </body>
-
 </html>
