--- a/src/main/resources/templates/acronyms.html
+++ b/src/main/resources/templates/acronyms.html
@@ -28,7 +28,7 @@
     </div>
     <span class="spanmenu">&nbsp;&nbsp;</span>
     <div  class="divmenu">
-        <input type="text" style="width:380px; margin-left:16px;font-size:16px;" placeholder="ARE" />
+        <input type="text" style="width:380px; margin-left:16px;font-size:16px;" />
         <button type="submit" id="btn_search">
             <img src="img/search.png" alt="Search Logo"></button>
 
@@ -37,17 +37,14 @@
     </div>
     <div class="row" style="height:30px;">
         <label style="background-color:#EBEBDC;margin-left:360px;font-size:18px;">Mots clé :&nbsp</label>
-        <input type="text" id="motcle1" aria-label="mot clé 1"/>&nbsp
-        <input type="text" id="motcle2" />&nbsp
+        <input type="text" id="motcle1" aria-label="mot clé 1"/>&nbsp;
+        <input type="text" id="motcle2" />&nbsp;
         <input type="text" id="motcle3" />
     </div>
 </div>
 <div class="container">
 
-    <!--h2 th : txt="${name}"></h1>
-    <h2  th : txt="${author}></h2-->
 
-    <!--div th:if="$ not #lists.isEmpty(acronyms)}"-->
         <div class="row">
             <div class="col-lg-8 col-md-7 col-sm-6">
                 <h6>12 terme peuvent correspondre à votre recherche</h6>
@@ -75,8 +72,7 @@
                 </table>
             </div>
         </div>
-    <!--/div-->
-</div>
+ </div>
 
 <footer  style="height:80px;background-color:#EBEBDC;  position: absolute;
   bottom: 0;
