--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,27 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
-
 <body>
-<!--   <ul class="ul1">
-        <li class="li1"><img class="logo_dico" id="logo_dico" src="img/dico.png" alt="Dico photo"/></li>
-        <li class="li1"><label class="dicodsi">DicoDsi</label></li>
-        <li class="float_right"><img class="logo_pe" src="img/logo_pe.png" alt="logo_pe photo"/></li>
-    </ul> -->
-
-<!--<div class="container-fluid">
-  <ul class="ul1">
-        <li class="li1"><img class="logo_dico" id="logo_dico" src="img/dico.png" alt="Dico photo"/></li>
-        <li class="li1"><label class="dicodsi">DicoDsi</label></li>
-        <li class="float_right"><img class="logo_pe" src="img/logo_pe.png" alt="logo_pe photo"/></li>
-    </ul>
-</div>-->
-
 <div class="container">
       <div class="row">
-         <!--<div class="col" >-->
-        <div class="mx-auto w-100 git status
-        gtext-center">
+        <div class="mx-auto w-100 text-center">
                   <p class="content">
                       Bienvenue sur le dictionnaire partagé de la DSI.
                       Saisissez un terme, un acronyme ou des mots clé et cliquez sur la loupe
@@ -48,87 +31,6 @@
               </div>
            </div>
     </div>
-   <!--    <div class="footbar">
-      <ul class="ul1">
-          <li class="li1"><div class="float-lg-left nbleft"  th:text="|${nombre}  termes à la  date du ${dateJour}|"> </div></li>
-          <li class="float-lg-right float-right li1"><a  class="ex2"  href="mailto:sicommunication.00317@pole-emploi.fr?subject=Dico : demande d'intervention">Contacter l'administrateur</a></li>
-      </ul>
-      </div>  -->
-</div>
-<<<<<<< HEAD
-
-<style>
-    .vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
-}
-</style>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<!-- Masthead -->
-<header align="center" >
-    <div class="col-lg-12 col-md-8 col-sm-4">
-    <div class="container" align="center">
-        <div class="row text-center vertical-align vcenter">
-            <div style="font-size:20px;text-align:center;color:#808000;">
-                <h5> Bienvenue sur le dictionnaire partagé de la DSI</h5>
-                <h5>Saisissez un terme, un acronyme ou des mots clé et cliquez sur la loupe</h5>
-                <h5> pour obtenir sa définition.</h5>
-                <h5>Si le terme recherché n'éxiste pas dans le Dico,</h5>
-                <h5>n'hésitez pas à créer lorsque vous aurez les différents éléments</h5>
-                <h5>nécessaires à sa création (libellé en clair et sa définition)</h5>
-                <h5> Si la définition proposée vous semble erronée,</h5>
-                <h5> vous avez la possibilité de la corriger.</h5>
-                <h5> Si le terme ou acronyme n'est plus usité, déclarez le comme obsolète.</h5>
-                <h5> Bonne navigation. </h5>
-            </div>
-        </div>
-    </div>
-    </div>
-    <br>
-    <br>
-    <div class="row navigation-order" align="center">
-        <div class="col-lg-12 col-md-8 col-sm-4">
-            <a  class="ex2" href="/acronyms"><h3>Liste des acronymes</h3></a>
-        </div>
-    </div>
-<br>
-<br>
-</header>
-
-
-<style>
-    a.ex2:hover, a.ex2:active {font-size: 110%;}
-</style>
-
-
-<footer  style="height:80px;background-color:#EBEBDC;  position: absolute;
-  bottom: 0;
-  width: 100%;" >
-    <div class="float-lg-left" th:text="|${nombre}  termes à la  date du ${dateJour}|">
-    </div>
-    <div class="container">
-        <div class="row">
-
-            <div class="col-lg-12 h-40 text-lg-right">
-                <ul class="list-inline mb-2">
-                    <li  class="list-inline-item">
-                        <a  class="ex2" style="color:#E66E0A;" href="#">A propos</a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a  class="ex2" style="color:#E66E0A;" th:href="${mailto}">Contacter l'administrateur</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
-=======
->>>>>>> responsive
+ </div>
 </body>
 </html>
