--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,83 +1,65 @@
-html {
-   height:100%;
+html{
+  height:100%;
 }
 
-body {
-   height:100%;
-   position: relative;
+body{
+  height:100%;
+  position: relative;
 }
 
 #wrap{
   min-height:100%;
   position: relative;
 }
+
+#header{
+  position: relative;
+  background-color: yellow;
+}
 #main{
   position relative;
   padding-bottom: 100px;
+  background-color: blue;
 }
-.content {
-    margin-top:10%;
-    margin-bottom:10%;
-    margin-left:15%;
-    margin-right:15%;
-    font-size:1.25rem;
-}
-
-.link {
-    color:#E66E0A;
-    text-decoration:none;
-}
-
 #footer{
-    position: absolute;
-    bottom: 0;
-    height:80px;
-    background-color:#EBEBDC;
-    color:#E66E0A;
-    float : left;
-    font-size:1.10rem;
-    min-width:100%;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+  background-color:#EBEBDC;
+  float:left;
+  min-width: 100%;
+  font-size:1rem;
 }
 
+.total{
+    color:#E66E0A;
+}
+.f-col {
+    width: 50%;
+    float: left;
+    min-width:300px;
+}
+
+.contact {
+    text-align: right;
+}
+
+.link{
+    color:#E66E0A;
+}
 a.link:hover, a.link:active {
     font-size: 110%;
     font-weight:bold;
     text-decoration:underline;
     color:#E66E0A;
- }
-
-.total {
-	width: 50%;
-	float: left;
-    min-width:33%;
-    padding-left:1%;
 }
 
-.contact {
-  text-align: right;
-  min-width:33%;
-  padding-right:1%;
-}
 
-/*Extra small devices (portrait phones, less than 576px)*/
+/* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
-    .content{
-        margin-left:5%;
-        margin-right:5%;
-    }
-    .total,.contact  {
-        text-align: center;
-    }
-}
+  .f-col {
+    text-align: center;
+    width: 100%;
+  }
 
-/*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) and (max-width: 767.98px) {
-   .content{
-        margin-left:5%;
-        margin-right:5%;
-   }
-}
-
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) and (max-width: 991.98px) {
 }
