--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -19,7 +19,6 @@ body{
 #main{
   position relative;
   padding-bottom: 100px;
-  background-color: blue;
 }
 #footer{
   height: 80px;
@@ -31,13 +30,15 @@ body{
   font-size:1rem;
 }
 
-.total{
-    color:#E66E0A;
-}
 .f-col {
     width: 50%;
     float: left;
     min-width:300px;
+}
+
+.total{
+    color:#E66E0A;
+    padding-left:2%;
 }
 
 .contact {
@@ -46,6 +47,7 @@ body{
 
 .link{
     color:#E66E0A;
+    padding-right:2%;
 }
 a.link:hover, a.link:active {
     font-size: 110%;
@@ -54,12 +56,19 @@ a.link:hover, a.link:active {
     color:#E66E0A;
 }
 
+.welcome {
+    text-align:center;
+    margin-top:10%;
+    margin-bottom:5%;
+    margin-left:15%;
+    margin-right:15%;
+    font-size:1.25rem;
+}
 
 /* Extra small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
+@media (max-width: 767.98px) {
   .f-col {
     text-align: center;
     width: 100%;
   }
-
 }
